fix-broken-tests (#2091)
* threadsafety for api object

* mobile: prefix for mobile commands

* threadsafe operations

* prefixing mobile: into executeScript

* fix android tests setup